# linkerd2-proxy

linkerd/app/: Cargo.toml
linkerd/app/gateway/: Cargo.toml
linkerd/app/gateway/src/: lib.rs
linkerd/app/inbound/: Cargo.toml
linkerd/app/inbound/src/: direct.rs  lib.rs
linkerd/app/inbound/src/http/: mod.rs
linkerd/app/outbound/: Cargo.toml
linkerd/app/outbound/src/: discover.rs  endpoint.rs  ingress.rs  lib.rs  logical.rs  switch_logical.rs
linkerd/app/outbound/src/http/: detect.rs  endpoint.rs  logical.rs
linkerd/app/outbound/src/tcp/: connect.rs  logical.rs
linkerd2-proxy/: Cargo.toml
