[package]
name = "linkerd2-proxy"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2018"
publish = false
description = "The main proxy executable"

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread", "num_cpus"]
enabled-outbound = ["linkerd-app/enabled-outbound"]
enabled-outbound-detect = ["linkerd-app/enabled-outbound-detect"]
enabled-outbound-endpoint = ["linkerd-app/enabled-outbound-endpoint"]
enabled-outbound-ingress = ["linkerd-app/enabled-outbound-ingress"]
enabled-outbound-logical = ["linkerd-app/enabled-outbound-logical"]

[dependencies]
futures = "0.3.9"
mimalloc = { version = "0.1.19", optional = true }
num_cpus = { version = "1", optional = true }
linkerd-app = { path = "../linkerd/app" }
linkerd-signal = { path = "../linkerd/signal" }
tokio = { version = "1", features = ["rt", "time", "net"] }
tracing = "0.1.23"
